--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "nodemon": "^3.0.2",
     "npm": "^10.2.5",
     "sequelize": "^6.35.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
     "validatorjs": "^3.22.1"
   }
